Updated test